--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ datasets = "^2.19.0"
 ir-measures = "^0.3.3"
 dirhash = "^0.4.0"
 more-itertools = "^10.2.0"
+bs4 = "^0.0.2"
+lxml = "^5.2.1"
 
 
 [[tool.poetry.source]]
