--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# Project-specific dirs
+/datasets
+/indexes
+/results
+/original_data
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
